rust_kill/target/debug/build/atomic-a013208114dfd00e/stderr
error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe0.probe0.247fc7c2-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe0.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe1.probe1.103148df-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe1.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

warning: autocfg could not probe for `std`
error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe2.probe2.6109820e-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe2.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe3.probe3.e4360fb5-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe3.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe4.probe4.ae85e1df-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe4.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe5.probe5.f2dbdd71-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe5.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe6.probe6.67ab3e1a-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe6.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe7.probe7.2d7e5d2b-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe7.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe8.probe8.5743013e-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe8.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error[E0433]: failed to resolve: could not find `AtomicU128` in `atomic`
 --> <anon>:1:46
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicU128::compare_exchange; }
  |                                              ^^^^^^^^^^ could not find `AtomicU128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: could not find `AtomicI128` in `atomic`
 --> <anon>:1:46
  |
1 | pub fn probe() { let _ = core::sync::atomic::AtomicI128::compare_exchange; }
  |                                              ^^^^^^^^^^ could not find `AtomicI128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe12.probe12.a6a7af4e-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe12.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe13.probe13.deb1452b-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe13.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe14.probe14.311220dc-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe14.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe15.probe15.7e9185da-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe15.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe16.probe16.f82f1965-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe16.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe17.probe17.1b2f7b34-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe17.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error: could not copy "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe18.probe18.689a0f84-cgu.0.rcgu.ll" to "c:\\Users\\Twilight\\desktop\\projects\\UIUC\\rust\\rust-project\\rust_kill\\target\\debug\\build\\atomic-a013208114dfd00e\\out\\probe18.ll": 拒绝访问。 (os error 5)

error: aborting due to previous error

error[E0433]: failed to resolve: could not find `AtomicU128` in `atomic`
 --> <anon>:1:45
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicU128::compare_exchange; }
  |                                             ^^^^^^^^^^ could not find `AtomicU128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error[E0433]: failed to resolve: could not find `AtomicI128` in `atomic`
 --> <anon>:1:45
  |
1 | pub fn probe() { let _ = std::sync::atomic::AtomicI128::compare_exchange; }
  |                                             ^^^^^^^^^^ could not find `AtomicI128` in `atomic`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
